# IngAI

./: .dockerignore  .gitignore  README.md  create_database.sql  dockerfile  jobs.json  main.py  openai_session.py  pyproject.toml  requirements.txt  test_article.py  test_crawler.py
config/: __init__.py  crawler_config.py  database_config.py  logging_config.py  open_api_config.py
middlewares/: exception_handler.py
model/: __init__.py  db_model.py  openai_model.py  request_model.py
mssql-bundle/: msodbcsql18_18.3.3.1-1_amd64.sig
scripts/: create_database.sql
service/: __init__.py  crawler.py  database_service.py  openai_session.py
